--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,10 @@
 <body>
   <app-root></app-root>
 </body>
+<style>
+  body{
+    background-color:  rgb(54,58,61);
+    color: white;
+  }
+</style>
 </html>
